--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CSCI225 - Judah Owen</title>
 </head>
 <body>
-    <h1>The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues.</h1>
+    <h1>Text here</h1>
 </body>
 
 
