--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSCI225 - Judah Owen</title>
+    <title>CSCI225 - Homepage of Judah Owen</title>
 </head>
+
 <body>
-    <h1>The FitnessGram Pacer test is a multistage aerobic capacity test that progressively gets more difficult as it continues.</h1>
+    <!--Main Page Content-->
+    <!--navbar section-->
+    <div class="navbar">
+
+    </div>
+    <!--introduction section-->
+    <div class="introduction">
+
+    </div>
+    <!--assignment section-->
+    <div class="assignments">
+
+    </div>
 </body>
 
 <!--These comments alter nothing for the actual code.-->
+
 </html>
