--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
     <!--Main Page Content-->
+    <h1>CSCI225 - Homepage of Judah Owen</h1>
     <!--navbar section-->
     <div class="navbar">
+        <p><a href="https://usca.edu">USCA Main Page</a></p>
 
     </div>
     <!--introduction section-->
     <div class="introduction">
-
+        <h1>Introduction</h1>
     </div>
     <!--assignment section-->
     <div class="assignments">
