--- a/index.html
+++ b/index.html
@@ -12,17 +12,96 @@
     <h1>CSCI225 - Homepage of Judah Owen</h1>
     <!--navbar section-->
     <div class="navbar">
-        <p><a href="https://usca.edu">USCA Main Page</a></p>
+        <p><a href="https://www.usca.edu">USCA Main Page</a></p>
+        <p><a href="#assignments">Assignments</a></p>
+        <p><a href="#portfolio">Portfolio</a></p>
+        <p><a href="#contact">Contact Information</a></p>
+        <p><a href="#schedule">Schedule</a></p>
 
     </div>
     <!--introduction section-->
     <div class="introduction">
         <h1>Introduction</h1>
-    </div>
+        <p>Hello! My name is Judah Owen, 
+            and I am a junior at the University of South Carolina Aiken. <br>
+            <img src="C:\Users\iefer\Documents\Classes\CSCI225\GithubRepository\CSCI225\meWhileProgramming.jpg" 
+        width="300" height="400" alt="Me!"> <br>
+            I am majoring in Applied Computer Science and plan on working in Software Development and becoming an Indie-game developer. <br> 
+            I am originally from Augusta, Georgia, and I have lived there my whole life. <br>
+            I enjoy playing video games, reading books, and spending time with friends and family. <br>
+            I am excited to be taking CSCI225 this semester and look forward to learning more about web development and programming. <br>
+            Here's to an interesting and productive semester!</p>
+
+        </div>
     <!--assignment section-->
     <div class="assignments">
+        <h2 id="assignments">Assignments</h2>
+        <p>Below is a list of assignments for this course:</p>
+        <ol>
+            <li><a href="Assignment1.pdf">Assignment 1</a></li>
+        </ol>
+    </div>
+    <!--portfolio section-->
+    <div class="portfolio">
+        <h2 id="portfolio">Portfolio</h2>
+        <p>Below is a list of projects I have worked on:</p>
+        <ol>
+            <li><p><b>Fighting Game</b> (<i>Solo Project</i>): A Java Command Line rock, paper, scissors clone.</p>
+            <ul>
+                <li><p>Implemented using Java's Scanner class for input.</p></li>
+                <li><p>Features a simple text-based interface.</p></li>
+                <li><p>Includes basic error handling for user input.</p></li>
+                <li><p>Allows for multiple rounds of play, checking each possible outcome through a large array of "if-else" statements.</p></li>
+            </ul>
+            </li>
+            <li><p><b>Pool Game</b> (<i>Solo Project</i>): A 2D pool game implemented in Java using simple graphics and physics engine.</p>
+            <ul>
+                <li><p>Utilizes Java's built-in graphics library for rendering.</p></li>
+                <li><p>Features realistic physics for ball movement and collision detection.</p></li>
+                <li><p>Built in object removal tool for when the balls fall into the pockets.</p></li>
+            </ul>
+            </li>
+        </ol>
+    </div>
+    <!--contact information section-->
+    <div class="contact">
+        <h2 id="contact">Contact Information</h2>
+        <address>
+            Contact me at:
+            <a href="mailto:jdowen@usca.edu">jdowen@usca.edu</a><br>
+            <br>
+        </address>
 
     </div>
+    <!--schedule section-->
+    <div class="schedule">
+        <h2 id="schedule">Schedule</h2>
+        <p>Below is my weekly schedule:</p>
+        <table border="10">
+            <tr>
+                <th>Day</th>
+                <th>Time</th>
+                <th>Class</th>
+            </tr>
+            <tr>
+                <td rowspan="2">Monday & Wednesday</td>
+                <td>12:00 PM - 01:15 PM</td>
+                <td>CSCI 225</td>
+            </tr>
+            <tr>
+                <td>01:30 PM - 02:45 PM</td>
+                <td>CSCI 591</td>
+            </tr>
+            <tr>
+                <td>Tuesday & Thursday</td>
+                <td>04:30 PM - 05:45 PM</td>
+                <td>CSCI 340</td>
+            </tr>
+        </table>
+    </div>
+    <footer>
+        <p>&copy; <strong>2025 Judah Owen. All rights reserved.</strong></p>
+    </footer>
 </body>
 
 <!--These comments alter nothing for the actual code.-->
