--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <h1>Introduction</h1>
         <p>Hello! My name is Judah Owen, 
             and I am a junior at the University of South Carolina Aiken. <br>
-            <img src="C:\Users\iefer\Documents\Classes\CSCI225\GithubRepository\CSCI225\meWhileProgramming.jpg" 
-        width="300" height="400" alt="Me!"> <br>
+            <img src="meWhileProgramming.jpg" width="300" height="400" alt="Me!"> <br>
             I am majoring in Applied Computer Science and plan on working in Software Development and becoming an Indie-game developer. <br> 
             I am originally from Augusta, Georgia, and I have lived there my whole life. <br>
             I enjoy playing video games, reading books, and spending time with friends and family. <br>
