--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <p>Below is a list of assignments for this course:</p>
         <ol>
             <li><a href="Assignment1.pdf">Assignment 1</a></li>
+            <li><a href="Assignment2.pdf">Assignment 2</a>
+                <ul><li><a href="ContactMe.html">ContactMe</a></li>
+            </li>
         </ol>
     </div>
     <!--portfolio section-->
