--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/home.css">
     <title>CSCI225 - Homepage of Judah Owen</title>
 </head>
 
@@ -22,13 +23,13 @@
     <!--introduction section-->
     <div class="introduction">
         <h1>Introduction</h1>
+        <img src="meWhileProgramming.jpg" width="225" height="300" alt="Me!">
         <p>Hello! My name is Judah Owen, 
-            and I am a junior at the University of South Carolina Aiken. <br>
-            <img src="meWhileProgramming.jpg" width="300" height="400" alt="Me!"> <br>
-            I am majoring in Applied Computer Science and plan on working in Software Development and becoming an Indie-game developer. <br> 
-            I am originally from Augusta, Georgia, and I have lived there my whole life. <br>
-            I enjoy playing video games, reading books, and spending time with friends and family. <br>
-            I am excited to be taking CSCI225 this semester and look forward to learning more about web development and programming. <br>
+            and I am a junior at the University of South Carolina Aiken.
+            I am majoring in Applied Computer Science and plan on working in Software Development and becoming an Indie-game developer.
+            I am originally from Augusta, Georgia, and I have lived there my whole life.
+            I enjoy playing video games, reading books, and spending time with friends and family.
+            I am excited to be taking CSCI225 this semester and look forward to learning more about web development and programming.
             Here's to an interesting and productive semester!</p>
 
         </div>
@@ -39,8 +40,9 @@
         <ol>
             <li><a href="Assignment1.pdf">Assignment 1</a></li>
             <li><a href="Assignment2.pdf">Assignment 2</a>
-                <ul><li><a href="ContactMe.html">ContactMe</a></li>
+                <ul><li><a href="ContactMe.html">ContactMe</a></li></ul>
             </li>
+            <li><a href="Assignment3.pdf">Assignment 3</a></li>
         </ol>
     </div>
     <!--portfolio section-->
@@ -79,7 +81,7 @@
     <div class="schedule">
         <h2 id="schedule">Schedule</h2>
         <p>Below is my weekly schedule:</p>
-        <table border="10">
+        <table border="3">
             <tr>
                 <th>Day</th>
                 <th>Time</th>
