--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!--introduction section-->
     <div class="introduction">
         <h1>Introduction</h1>
-        <img src="meWhileProgramming.jpg" width="225" height="300" alt="Me!">
-        <p>Hello! My name is Judah Owen, 
+        <p><img src="meWhileProgramming.jpg" width="225" height="300" alt="Me!">
+            Hello! My name is Judah Owen, 
             and I am a junior at the University of South Carolina Aiken.
             I am majoring in Applied Computer Science and plan on working in Software Development and becoming an Indie-game developer.
             I am originally from Augusta, Georgia, and I have lived there my whole life.
