--- a/ContactMe.html
+++ b/ContactMe.html
@@ -4,105 +4,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+        .container-xxl{
+            background-color: rgb(141, 141, 251);
+            color: rgb(255, 255, 255);
+        }
+        .navbar{
+            background-color: brown;
+            padding: 10px;
+        }
+        .iframe{
+            margin-left: 20px;
+            border-top: 10px hsla(0, 0%, 100%, 0.8);
+            border-left: 20px hsla(0, 0%, 100%, 0.8);
+            border-right: 20px hsla(0, 0%, 100%, 0.8);
+            border-bottom: 20px hsla(0, 0%, 100%, 0.8);
+            box-shadow: 8px 8px 10px hsl(0, 0%, 100%);
+        }
+        body h1, h2{
+            color: rgb(255, 132, 61);
+        }
+    </style>
+        <title>Contact Me</title>
 </head>
 
 <body>
-    <h1>Contact Information</h1>
-    <p>If you would like to get in touch with me, please feel free to reach out via email or through my social media channels.</p>
-    <h2>Email</h2>
-    <p>You can email me at: <a href="mailto:jdowen@usca.edu">jdowen@usca.edu</a></p>
-    <!--Embedding Video-->
-    <h2>Embedded Video</h2>
-    <center>
-        <iframe width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/lhckuhUxcgA" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
-    </center>
-    <!--Feedback Form-->
-    <h2>Feedback Form</h2>
-    <form id="feedback" name="feedback" action="#" method="post">
+    <div class="container-xxl">
+        <div class="row">
+            <div class="col">
+                <div class="navbar navbar-expand-lg">
+                    <ul class="navbar nav">
+                        <li class="nav-item"><a class="nav-link" href="https://www.usca.edu"
+                                style="display: inline-block; margin-right: 10px;">USCA Main
+                                Page</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#assignments"
+                                style="display: inline-block; margin-right: 10px;">Assignments</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio"
+                                style="display: inline-block; margin-right: 10px;">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact"
+                                style="display: inline-block; margin-right: 10px;">Contact Information</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#schedule"
+                                style="display: inline-block;">Schedule</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>Contact Information</h1>
+                <p>If you would like to get in touch with me, please feel free to reach out via email or through my
+                    social media channels.</p>
 
-    <!-- First Name -->
-    <label for="fname">First Name:</label>
-    <input type="text" id="fname" name="fname" placeholder="anonymous" required>
-    <br><br>
+                <h2>Email</h2>
+                <p>You can email me at: <a href="mailto:jdowen@usca.edu">jdowen@usca.edu</a></p>
 
-    <!-- Last Name -->
-    <label for="lname">Last Name:</label>
-    <input type="text" id="lname" name="lname" placeholder="anonymous" required>
-    <br><br>
+                <!--Embedding Video-->
 
-    <!-- Email -->
-    <label for="mail">Email:</label>
-    <input type="email" id="mail" name="mail" placeholder="name@domain.com">
-    <br><br>
+                <h2>Embedded Video</h2>
 
-    <!-- Recommend Radio Buttons -->
-    <p>Would you recommend this website?</p>
-    <input type="radio" id="yes" name="recommend" value="yes">
-    <label for="yes">Yes</label>
-    <input type="radio" id="no" name="recommend" value="no">
-    <label for="no">No</label>
-    <br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/lhckuhUxcgA"></iframe>
+                </iframe>
+            </div>
+            <!--Feedback Form-->
+            <div class="col">
+                <form id="feedback" name="feedback" action="#" method="post">
+                    <div class="form-floating mb-3">
+                        <!-- First Name -->
+                        <input class="form-control" type="text" id="fn" name="fname" placeholder="anonymous" required>
+                        <label for="fn">First Name:</label>
+                    </div>
+                    <!-- Last Name -->
+                    <div class="form-floating mb-3">
+                        <input class="form-control" type="text" id="lname" name="lname" placeholder="anonymous" required>
+                        <label for="lname">Last Name:</label>
+                    </div>
+                    <!-- Email -->
+                    <div class="form-floating mb-3">
+                        <input class="form-control" type="email" id="mail" name="mail" placeholder="name@domain.com">
+                        <label for="mail">Email:</label>
+                    </div>
 
-    <!-- Favorite Website Select -->
-    <label for="favsite">Favorite Website:</label>
-    <select id="favsite" name="favsite">
-      <option value="google">Google</option>
-      <option value="facebook">Facebook</option>
-      <option value="twitter">Twitter</option>
-      <option value="time">Time</option>
-      <option value="other">Other</option>
-    </select>
-    <br><br>
+                    <!-- Recommend Radio Buttons -->
+                    <p>Would you recommend this website?</p>
+                    <input type="radio" id="yes" name="recommend" value="yes">
+                    <label for="yes">Yes</label>
+                    <input type="radio" id="no" name="recommend" value="no">
+                    <label for="no">No</label>
+                    <br><br>
 
-    <!-- Rating -->
-    <label for="rating">Rate this website (1-10):</label>
-    <input type="range" id="rating" name="rating" min="1" max="10" step="1" value="5" aria-valuemin="1" aria-valuemax="10" aria-valuenow="5">
-    <output id="ratingValue">5</output>
-    <script>
-    // keep small inline script near the control to update visible value and ARIA
-    (function () {
-        const slider = document.getElementById('rating');
-        const output = document.getElementById('ratingValue');
-        const update = (v) => {
-            output.value = v;
-            slider.setAttribute('aria-valuenow', v);
-        };
-        update(slider.value);
-        slider.addEventListener('input', (e) => update(e.target.value));
-    })();
-    </script>
-    <br><br>
+                    <!-- Favorite Website Select -->
+                    <label for="favsite">Favorite Website:</label>
+                    <select id="favsite" name="favsite">
+                        <option value="google">Google</option>
+                        <option value="facebook">Facebook</option>
+                        <option value="twitter">Twitter</option>
+                        <option value="time">Time</option>
+                        <option value="other">Other</option>
+                    </select>
+                    <br><br>
 
-    <!-- Extra HTML5 features -->
-    <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-    <br><br>
+                    <!-- Rating -->
+                    <label for="rating">Rate this website (1-10):</label>
+                    <input type="range" id="rating" name="rating" min="1" max="10" step="1" value="5" aria-valuemin="1"
+                        aria-valuemax="10" aria-valuenow="5">
+                    <output id="ratingValue">5</output>
+                    <script>
+                        // keep small inline script near the control to update visible value and ARIA
+                        (function () {
+                            const slider = document.getElementById('rating');
+                            const output = document.getElementById('ratingValue');
+                            const update = (v) => {
+                                output.value = v;
+                                slider.setAttribute('aria-valuenow', v);
+                            };
+                            update(slider.value);
+                            slider.addEventListener('input', (e) => update(e.target.value));
+                        })();
+                    </script>
+                    <br><br>
 
-    <label for="website">Your Website:</label>
-    <input type="url" id="website" name="website" placeholder="https://example.com">
-    <br><br>
+                    <!-- Extra HTML5 features -->
+                    <label for="phone">Phone Number:</label>
+                    <input type="tel" id="phone" name="phone" placeholder="123-456-7890"
+                        pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                    <br><br>
 
-    <label for="dob">Date of Birth:</label>
-    <input type="date" id="dob" name="dob">
-    <br><br>
+                    <label for="website">Your Website:</label>
+                    <input type="url" id="website" name="website" placeholder="https://example.com">
+                    <br><br>
 
-    <!-- Comments -->
-    <label for="comment">Additional Comments:</label><br>
-    <textarea id="comment" name="comment" rows="5" cols="40"></textarea>
-    <br><br>
+                    <label for="dob">Date of Birth:</label>
+                    <input type="date" id="dob" name="dob">
+                    <br><br>
 
-    <!-- Submit -->
-    <input type="submit" value="Submit Feedback">
+                    <!-- Comments -->
+                    <label for="comment">Additional Comments:</label><br>
+                    <textarea id="comment" name="comment" rows="5" cols="40"></textarea>
+                    <br><br>
 
-  </form>
+                    <!-- Submit -->
+                    <input type="submit" value="Submit Feedback">
+
+                </form>
+            </div>
+
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
