--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <ul><li><a href="ContactMe.html">ContactMe</a></li></ul>
             </li>
             <li><a href="Assignment3.pdf">Assignment 3</a></li>
+            <li><a href="Assignment4.pdf">Assignment 4</a></li>
+            <li><a href="Assignment5.pdf">Assignment 5</a></li>
+                <ul><li><a href="powerbill.html">Georgia Power Bill Calculator</a></li></ul>
         </ol>
     </div>
     <!--portfolio section-->
