--- a/ContactMe.html
+++ b/ContactMe.html
@@ -1,160 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <style>
-        .container-xxl{
-            background-color: rgb(141, 141, 251);
-            color: rgb(255, 255, 255);
-        }
-        .navbar{
-            background-color: brown;
-            padding: 10px;
-        }
-        .iframe{
-            margin-left: 20px;
-            border-top: 10px hsla(0, 0%, 100%, 0.8);
-            border-left: 20px hsla(0, 0%, 100%, 0.8);
-            border-right: 20px hsla(0, 0%, 100%, 0.8);
-            border-bottom: 20px hsla(0, 0%, 100%, 0.8);
-            box-shadow: 8px 8px 10px hsl(0, 0%, 100%);
-        }
-        body h1, h2{
-            color: rgb(255, 132, 61);
-        }
-    </style>
-        <title>Contact Me</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Bootstrap CSS (required) -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
+
+  <title>Contact Me</title>
 </head>
-
 <body>
+
+  <!-- Fixed-top Navbar -->
+  <nav class="navbar navbar-expand-lg bg-warning fixed-top">
     <div class="container-xxl">
-        <div class="row">
-            <div class="col">
-                <div class="navbar navbar-expand-lg">
-                    <ul class="navbar nav">
-                        <li class="nav-item"><a class="nav-link" href="https://www.usca.edu"
-                                style="display: inline-block; margin-right: 10px;">USCA Main
-                                Page</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#assignments"
-                                style="display: inline-block; margin-right: 10px;">Assignments</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio"
-                                style="display: inline-block; margin-right: 10px;">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact"
-                                style="display: inline-block; margin-right: 10px;">Contact Information</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#schedule"
-                                style="display: inline-block;">Schedule</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h1>Contact Information</h1>
-                <p>If you would like to get in touch with me, please feel free to reach out via email or through my
-                    social media channels.</p>
+      <a class="navbar-brand fw-bold" href="#">Judah Owen</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-                <h2>Email</h2>
-                <p>You can email me at: <a href="mailto:jdowen@usca.edu">jdowen@usca.edu</a></p>
-
-                <!--Embedding Video-->
-
-                <h2>Embedded Video</h2>
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/lhckuhUxcgA"></iframe>
-                </iframe>
-            </div>
-            <!--Feedback Form-->
-            <div class="col">
-                <form id="feedback" name="feedback" action="#" method="post">
-                    <div class="form-floating mb-3">
-                        <!-- First Name -->
-                        <input class="form-control" type="text" id="fn" name="fname" placeholder="anonymous" required>
-                        <label for="fn">First Name:</label>
-                    </div>
-                    <!-- Last Name -->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" type="text" id="lname" name="lname" placeholder="anonymous" required>
-                        <label for="lname">Last Name:</label>
-                    </div>
-                    <!-- Email -->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" type="email" id="mail" name="mail" placeholder="name@domain.com">
-                        <label for="mail">Email:</label>
-                    </div>
-
-                    <!-- Recommend Radio Buttons -->
-                    <p>Would you recommend this website?</p>
-                    <input type="radio" id="yes" name="recommend" value="yes">
-                    <label for="yes">Yes</label>
-                    <input type="radio" id="no" name="recommend" value="no">
-                    <label for="no">No</label>
-                    <br><br>
-
-                    <!-- Favorite Website Select -->
-                    <label for="favsite">Favorite Website:</label>
-                    <select id="favsite" name="favsite">
-                        <option value="google">Google</option>
-                        <option value="facebook">Facebook</option>
-                        <option value="twitter">Twitter</option>
-                        <option value="time">Time</option>
-                        <option value="other">Other</option>
-                    </select>
-                    <br><br>
-
-                    <!-- Rating -->
-                    <label for="rating">Rate this website (1-10):</label>
-                    <input type="range" id="rating" name="rating" min="1" max="10" step="1" value="5" aria-valuemin="1"
-                        aria-valuemax="10" aria-valuenow="5">
-                    <output id="ratingValue">5</output>
-                    <script>
-                        // keep small inline script near the control to update visible value and ARIA
-                        (function () {
-                            const slider = document.getElementById('rating');
-                            const output = document.getElementById('ratingValue');
-                            const update = (v) => {
-                                output.value = v;
-                                slider.setAttribute('aria-valuenow', v);
-                            };
-                            update(slider.value);
-                            slider.addEventListener('input', (e) => update(e.target.value));
-                        })();
-                    </script>
-                    <br><br>
-
-                    <!-- Extra HTML5 features -->
-                    <label for="phone">Phone Number:</label>
-                    <input type="tel" id="phone" name="phone" placeholder="123-456-7890"
-                        pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-                    <br><br>
-
-                    <label for="website">Your Website:</label>
-                    <input type="url" id="website" name="website" placeholder="https://example.com">
-                    <br><br>
-
-                    <label for="dob">Date of Birth:</label>
-                    <input type="date" id="dob" name="dob">
-                    <br><br>
-
-                    <!-- Comments -->
-                    <label for="comment">Additional Comments:</label><br>
-                    <textarea id="comment" name="comment" rows="5" cols="40"></textarea>
-                    <br><br>
-
-                    <!-- Submit -->
-                    <input type="submit" value="Submit Feedback">
-
-                </form>
-            </div>
-
-        </div>
+      <div id="mainNav" class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto fw-semibold">
+          <li class="nav-item"><a class="nav-link text-dark" href="https://www.usca.edu">USCA Main Page</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#assignments">Assignments</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#portfolio">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#contact">Contact Information</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="#schedule">Schedule</a></li>
+        </ul>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-</body>
+  </nav>
 
+  <!-- main container; padding-top offsets the fixed navbar height -->
+  <main class="container-xxl pt-5 mt-4">
+    <div class="row g-4 align-items-start">
+
+      <!-- Video column -->
+      <section class="col-12 col-md-6">
+        <h1 id="contact" class="mb-3">Contact Information</h1>
+        <p class="mb-4">
+          If you would like to get in touch with me, please reach out via email or through my social media channels.
+        </p>
+
+        <h2 class="h4">Embedded Video</h2>
+        <!-- Responsive, bordered video frame -->
+        <div class="ratio ratio-16x9 border border-4 rounded shadow">
+          <iframe
+            src="https://www.youtube.com/embed/lhckuhUxcgA"
+            title="YouTube video"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+
+      <!-- Form column -->
+      <section class="col-12 col-md-6">
+        <form id="feedback" name="feedback" action="#" method="post" class="p-3 p-md-4 border rounded-3 bg-light">
+          <h2 class="h4 mb-3">Send me a message</h2>
+
+          <!-- Floating labels -->
+          <div class="form-floating mb-3">
+            <input class="form-control" type="text" id="fname" name="fname" placeholder="anonymous" required />
+            <label for="fname">First Name</label>
+          </div>
+
+          <div class="form-floating mb-3">
+            <input class="form-control" type="text" id="lname" name="lname" placeholder="anonymous" required />
+            <label for="lname">Last Name</label>
+          </div>
+
+          <div class="form-floating mb-1">
+            <input class="form-control" type="email" id="mail" name="mail" placeholder="name@domain.com" />
+            <label for="mail">Email address</label>
+          </div>
+          <!-- Help text (assignment requirement) -->
+          <div class="form-text mb-3">Your email will only be used to reply to your message.</div>
+
+          <!-- Recommend (radio) -->
+          <fieldset class="mb-3">
+            <legend class="fs-6 mb-2">Would you recommend this website?</legend>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" id="yes" name="recommend" value="yes" />
+              <label class="form-check-label" for="yes">Yes</label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" id="no" name="recommend" value="no" />
+              <label class="form-check-label" for="no">No</label>
+            </div>
+          </fieldset>
+
+          <!-- Favorite Website (select) -->
+          <div class="mb-3">
+            <label class="form-label" for="favsite">Favorite Website</label>
+            <select id="favsite" name="favsite" class="form-select">
+              <option value="google">Google</option>
+              <option value="facebook">Facebook</option>
+              <option value="twitter">Twitter</option>
+              <option value="time">Time</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+
+          <!-- Range -->
+          <div class="mb-3">
+            <label for="rating" class="form-label">Rate this website (1–10)</label>
+            <input type="range" id="rating" name="rating" class="form-range" min="1" max="10" step="1" value="5" />
+            <div class="small text-muted">
+              Current: <span id="ratingValue" class="fw-semibold">5</span>
+            </div>
+          </div>
+
+          <!-- Phone / URL (form-control) -->
+          <div class="row g-3 mb-3">
+            <div class="col-md-6">
+              <label for="phone" class="form-label">Phone Number</label>
+              <input class="form-control" type="tel" id="phone" name="phone"
+                     placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+            </div>
+            <div class="col-md-6">
+              <label for="website" class="form-label">Your Website</label>
+              <input class="form-control" type="url" id="website" name="website" placeholder="https://example.com" />
+            </div>
+          </div>
+
+          <!-- Textarea -->
+          <div class="mb-3">
+            <label for="comment" class="form-label">Additional Comments</label>
+            <textarea id="comment" name="comment" class="form-control" rows="5"></textarea>
+          </div>
+
+          <!-- A few extra Bootstrap classes as requested -->
+          <!-- Examples used: fw-semibold, bg-warning, ratio, border, rounded, shadow, g-4, p-4, mt-4, ms-auto -->
+
+          <div class="d-grid">
+            <button class="btn btn-primary btn-lg" type="submit">Submit Feedback</button>
+          </div>
+        </form>
+      </section>
+    </div>
+  </main>
+
+  <!-- Bootstrap JS bundle (required for nav toggler, etc.) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+
+  <script>
+    // Update the visible range value
+    const slider = document.getElementById('rating');
+    const out = document.getElementById('ratingValue');
+    slider.addEventListener('input', e => out.textContent = e.target.value);
+  </script>
+</body>
 </html>
